feat(c/s):添加CIC的客户端和服务端核心、CDTE发行版